Audio play and add class to div

--- a/day1/index.html
+++ b/day1/index.html
@@ -6,6 +6,7 @@
 		<title>Drum Kit - Day 1</title>
 	</head>
 	<body>
+		<!-- using data-key HTML5 feature for own attribute -->
 		<div class="keys">
 			<div data-key="65" class="key">
 				<kbd>A</kbd>
