--- a/day1/index.html
+++ b/day1/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Drum Kit - Day 1</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<!-- using data-key HTML5 feature for own attribute -->
