Todo: add number of search result

--- a/day6/index.html
+++ b/day6/index.html
@@ -3,8 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>title</title>
+		<title>Ajax Type Ahead with fetch() - #JavaScript30 6/30</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<form class="search-form">
+			<h2><span class="result">0</span> results</h2>
+			<input type="text" class="search" placeholder="City or State">
+			<ul class="suggestions">
+				<li>Filter by city</li>
+				<li>or a state</li>
+			</ul>
+		</form>
+		<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
