Done: # of search results

--- a/day6/index.html
+++ b/day6/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<form class="search-form">
-			<h2><span class="result">0</span> results</h2>
+			<h2><span class="result">0</span> result(s)</h2>
 			<input type="text" class="search" placeholder="City or State">
 			<ul class="suggestions">
 				<li>Filter by city</li>
