Need more styles

--- a/day10/index.html
+++ b/day10/index.html
@@ -4,7 +4,42 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>JS Checkbox Challenge! #JavaScript30 10/30</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<div class="inbox">
+			<div class="item">
+				<input type="checkbox">
+				<p>This is an inbox layout</p>
+			</div>
+			<div class="item">
+				<input type="checkbox">
+				<p>Check one item</p>
+			</div>
+			<div class="item">
+				<input type="checkbox">
+				<p>Hold down your Shift key</p>
+			</div>
+			<div class="item">
+				<input type="checkbox">
+				<p>Check a lower item</p>
+			</div>
+			<div class="item">
+				<input type="checkbox">
+				<p>Everything in between should also be checked</p>
+			</div>
+			<div class="item">
+				<input type="checkbox">
+				<p>Try to do it without any libraries</p>
+			</div>
+			<div class="item">
+				<input type="checkbox">
+				<p>Just Vanilla JS</p>
+			<div class="item">
+				<input type="checkbox">
+				<p>And your done!</p>
+			</div>
+		</div>
+		<script src="app.js"></script>
 	</body>
 </html>
