--- a/day10/index.html
+++ b/day10/index.html
@@ -35,6 +35,7 @@
 			<div class="item">
 				<input type="checkbox">
 				<p>Just Vanilla JS</p>
+			</div>
 			<div class="item">
 				<input type="checkbox">
 				<p>And your done!</p>
