--- a/day11/index.html
+++ b/day11/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="player">
-			<video class="player__video viewer" src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
+			<video class="player__video viewer" src="buck_bunny.mp4"></video>
 			<div class="player__controls">
 				<div class="progress">
 					<div class="progress__filled"></div>
@@ -17,7 +17,7 @@
 				<input name="volume" class="player__slider" type="range" min="0" max="1" step="0.05" value="1">
 				<input name="playbackRate" class="player__slider" type="range" min="0.5" max="2" step="0.1" value="1">
 				<button class="player__button" data-skip="-10">&lt;&lt; 10s</button>
-				<button class="play" data-skip="25">25s &gt;&gt;</button>
+				<button class="player__button" data-skip="25">25s &gt;&gt;</button>
 			</div>
 		</div>
 		<script src="app.js"></script>
