--- a/day11/index.html
+++ b/day11/index.html
@@ -13,7 +13,7 @@
 				<div class="progress">
 					<div class="progress__filled"></div>
 				</div>
-				<button class="player__button toggle" title="Toggle Play">&#9658;<button>
+				<button class="player__button toggle" title="Toggle Play">▶<button>
 				<input name="volume" class="player__slider" type="range" min="0" max="1" step="0.05" value="1">
 				<input name="playbackRate" class="player__slider" type="range" min="0.5" max="2" step="0.1" value="1">
 				<button class="player__button" data-skip="-10">&lt;&lt; 10s</button>
