Modify javascript src attribute from app.js to lib/main.js

--- a/day1/index.html
+++ b/day1/index.html
@@ -32,7 +32,7 @@
 		<audio data-key="68" src="sounds/kick.wav"></audio>
 		<audio data-key="70" src="sounds/openhat.wav"></audio>
 
-		<script type="text/javascript" src="app.js">
+		<script type="text/javascript" src="lib/main.js">
 		</script>
 
 	</body>
