--- a/day10/index.html
+++ b/day10/index.html
@@ -41,6 +41,6 @@
 				<p>And your done!</p>
 			</div>
 		</div>
-		<script src="app.js"></script>
+		<script src="lib/main.js"></script>
 	</body>
 </html>
