--- a/day11/index.html
+++ b/day11/index.html
@@ -20,6 +20,6 @@
 				<button class="player__button" data-skip="25">25s &gt;&gt;</button>
 			</div>
 		</div>
-		<script src="app.js"></script>
+		<script src="lib/main.js"></script>
 	</body>
 </html>
