--- a/day3/index.html
+++ b/day3/index.html
@@ -11,7 +11,7 @@
 		<div class="controls">
 			<label for="spacing">Spacing:</label>
 			<input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
-			
+
 			<label for="blur">Blur:</label>
 			<input type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
@@ -19,6 +19,6 @@
 			<input type="color" name="base" value="#ffc600">
 		</div>
 		<img src="img/city.jpg">
-		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="lib/main.js"></script>
 	</body>
 </html>
