--- a/day12/index.html
+++ b/day12/index.html
@@ -7,6 +7,6 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<script src="app.js"></script>
+		<script src="lib/main.js"></script>
 	</body>
 </html>
