--- a/day2/index.html
+++ b/day2/index.html
@@ -14,6 +14,6 @@
 				<div class="hand sec-hand"></div>
 			</div>
 		</div>
-		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="lib/main.js"></script>
 	</body>
 </html>
