--- a/day5/index.html
+++ b/day5/index.html
@@ -34,6 +34,6 @@
 				<p>Up</p>
 			</div>
 		</div>
-		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="lib/main.js"></script>
 	</body>
 </html>
