--- a/day6/index.html
+++ b/day6/index.html
@@ -15,6 +15,6 @@
 				<li>or a state</li>
 			</ul>
 		</form>
-		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="lib/main.js"></script>
 	</body>
 </html>
