--- a/day8/index.html
+++ b/day8/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<canvas id="draw" width="800" height="800"></canvas>
-		<script src="app.js"></script>
+		<script src="lib/main.js"></script>
 	</body>
 </html>
