--- a/day18/index.html
+++ b/day18/index.html
@@ -3,10 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>title</title>
+		<title>JavaScript Array Reduce</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<li class="hello" data-time="4:50">Video 1</li>
+		<li class="hello" data-time="0:50">Video 1</li>
+		<li class="hello" data-time="12:04">Video 1</li>
+		<li class="hello" data-time="3:05">Video 1</li>
+		<li class="hello" data-time="1:30">Video 1</li>
+		<li class="hello" data-time="3:22">Video 1</li>
+		<li class="hello" data-time="5:33">Video 1</li>
+		<li class="hello" data-time="6:07">Video 1</li>
+		<li class="hello" data-time="8:09">Video 1</li>
+		<li class="hello" data-time="3:02">Video 1</li>
+		<li class="hello" data-time="12:34">Video 1</li>
 		<script src="lib/main.js"></script>
 	</body>
 </html>
